Bug 137575 - UI: Custom sorting state is lost when reopening the LibreOffice file picker dialog
Summary: UI: Custom sorting state is lost when reopening the LibreOffice file picker d...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-10-18 10:05 UTC by Telesto
Modified: 2020-10-28 08:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (2.73 KB, text/plain)
2020-10-18 10:06 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-10-18 10:05:32 UTC
Description:
Sorting of they file picker lost on (re)opening of dialog

Steps to Reproduce:
1. Open Writer
2. Open File
3. Sort the files by date
4. Close the dialog (cancel)
5. Reopen again

Actual Results:
Sorting lost

Expected Results:
Still present as before


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
7.1

and 6.4
Comment 1 Telesto 2020-10-18 10:06:35 UTC
Created attachment 166479 [details]
Bibisect log

Bisected to
author	Caolán McNamara <caolanm@redhat.com>	2019-10-21 14:20:12 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-10-29 13:58:47 +0100
commit 09e3d45cdc5c739e5246388a83ccfc6d76bf66e9 (patch)
tree 5ae533f38a626016951b02e7d2406c368b298723
parent 93a641d291adf86491cc68ac64f4f614c937183a (diff)
weld fpicker cluster

https://cgit.freedesktop.org/libreoffice/core/commit/?id=09e3d45cdc5c739e5246388a83ccfc6d76bf66e9
Comment 2 Telesto 2020-10-18 10:08:56 UTC
Adding CC: to Caolán McNamara

Running slightly ahead with unconfirmed.. but pretty straight forward, IMHO (and able to bibisect)
Comment 3 Kevin Suo 2020-10-18 12:01:20 UTC
Reproduced in
版本: 6.4.7.2
Build ID: 6.4.7.2-1.fc32
CPU 线程: 4; 操作系统: Linux 5.8; 界面渲染: 默认; VCL: gtk3; 
区域语言: zh-CN (zh_CN.UTF-8); UI 语言: zh-CN
Calc: threaded

With the "Use LibreOffice Dialog" enabled.
Comment 4 V Stuart Foote 2020-10-18 17:48:16 UTC
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 6ccf4dd2224e4beb567365903249858a2ca00082
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Expert Configuration 'UseSystemFileDialog' set False by-passing VistaFilePickerImpl.

Confirm sorting issues with LO internal file picker. Sort order reverts to A-Z sort on file name. And that the LO internal file picker previously retained the selected sort order.

But is this really an issue? Use on all os/DE requires knowledge of Expert Configuration dialog and the 'UseSystemFileDialog' stanza to by-pass use of os/DE native File Picker?
Comment 5 Telesto 2020-10-18 20:54:10 UTC
(In reply to V Stuart Foote from comment #4)
> But is this really an issue? Use on all os/DE requires knowledge of Expert
> Configuration dialog and the 'UseSystemFileDialog' stanza to by-pass use of
> os/DE native File Picker?

FWIW: not that I mentioned it anywhere, but I reported this against Linux GEN environment (didn't touch the settings; so assuming being at stock). Also happening on MacOS, I think. But might be cause of the non-aqua file picker at the moment (fixed tomorrow)

The reason I bibisected it, is because I sort they Downloads by date (and they top one is the bug doc being the most recent one). And now I have to using sort every time. 

Not sure what's the case on Windows.
Comment 6 V Stuart Foote 2020-10-18 21:17:49 UTC
(In reply to Telesto from comment #5)

> FWIW: not that I mentioned it anywhere, but I reported this against Linux
> GEN environment (didn't touch the settings; so assuming being at stock).
> Also happening on MacOS, I think. But might be cause of the non-aqua file
> picker at the moment (fixed tomorrow)
> 

Looks like bug 137573...

>...

> Not sure what's the case on Windows.

Windows doesn't seem affected.
Comment 7 Commit Notification 2020-10-27 16:41:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b8e38e458d47ce55432cda7aa03d665a462f2391

Resolves: tdf#137575 fpicker custom sorting setting not restored

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2020-10-27 17:05:07 UTC
fixed in master, backport to 7-0 in gerrit
Comment 9 Commit Notification 2020-10-28 08:37:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/2464e2e6894d5e820d8268bc80e3a696521d832f

Resolves: tdf#137575 fpicker custom sorting setting not restored

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.