Resolves: tdf#137575 fpicker custom sorting setting not restored

Change-Id: Id5fae909a12621f68eb8defcb01b91c304c61df6